test/regress/vsgc2815.f3
/*
 * Regression test VSGC-2815 : new expressions should report an error when trying to instantiate a mixin class.
 *
 * @test
 * @compile/fail
 */

mixin class A {
  var x = 10;
}

var a = new A();
